# cron-send-facture-spotify

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/cron/: send-facture-spotify.sh  test_cron.py
app/main/: get_gmail_content.py  main.py  send-facture.py  send_facture.py  send_message_fb.py
app/main/config/environment/: environment_configuration.py
app/main/cron/: send-facture-spotify.sh  send-receipt-spotify.sh
app/main/data/: GmailData.py
app/main/helper/: gcp_helper.py  imap_email_helper.py  logger.py
app/main/resource/fbchat/: _client.py  _message.py  _state.py  _thread.py
app/main/script/: run-app.sh
app/main/task/: get_email_content.py  get_gmail_content.py  send_message_fb.py
app/test/: test_cron.py
app/test/cron/: test-cron.sh
cronjob/: cron-send-facture-spotify  cron-send-receipt-spotify
docker/: Dockerfile
docker/gcp_cloud_run/: Dockerfile
env/: .env
resources/: Architecture.drawio
terraform/: iam.tf  main.tf  variables.tf
